--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <title>Sim Senhor</title>
@@ -17,7 +16,7 @@
 
         <div class="botões">
             <button id="tema" onclick="tema()">Tema</button>
-            <button id="historia" onclick="historia()" disabled>Historinha</button>
+            <button id="historia" onclick="historia()">Historinha</button>
             <button id="final" onclick="finalizar()" disabled>SIM SENHOR</button></div>
         </div>
 
