Adaptando para celular

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+
     <title>Sim Senhor</title>
 </head>
 <body>
     <div class="container">
 
         <div class="titulos">
-            <h1>Bomm</h1>
-            <h1>Diaaa</h1>
+            <h1>Bomm Diaaaa</h1>
         </div>
 
         <div class="botões">
             <button id="tema" onclick="tema()">Tema</button>
-            <button id="historia" onclick="historia()">Historinha</button>
-            <button id="final" onclick="finalizar()" disabled>SIM SENHOR</button></div>
+            <button id="historia" onclick="historia()" disabled>Historinha</button>
+            <button id="final" onclick="finalizar()" disabled>SIM SENHOR</button>
         </div>
 
         <p class="surpresa">Eu Te Amo</p>
     </div>
 </body>
 <script src="mind.js" defer></script>
-<a href="/Historinha/historinha.html"></a>
 </html>
