--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="container">
 
         <div class="titulos">
-            <h1>Bomm Diaaaa</h1>
+            <h1>
+                Bomm 
+                <br>
+                Diaaaa
+            </h1>
         </div>
 
         <div class="botões">
