--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@ function tema(){
 }
 
 function historia(){
-    final.disabled = false
     window.open("https://presente-da-nicki.github.io/Historinha-cap1/")
+}
+    
+function verificar(){
+    if(valor == 1){
+    final.disabled = false
 }
 
 function finalizar(){
